<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/landing_background"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/profile_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="5dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_round" />

            <!-- Name Label -->


            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LastName"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <!--  Mobile Label -->

            <EditText
                android:id="@+id/input_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phone"
                android:hint="@string/Mobile"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <!-- Name Label -->
            <EditText
                android:id="@+id/input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/DateofBirth"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_english"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/english"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_hindi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hindi"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/share"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/profile_btn_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/app_button_green_color"
        android:padding="12dp"
        android:text="@string/save"
        android:textColor="@color/white" />
</RelativeLayout>

